Implementação do método updateWorkshop.
