# src/main/java/com/portfolio/luisfmdc/api_sboot_jdbi_workshops/controller/WorkshopController.java
@@ -4,6 +4,7 @@ import com.portfolio.luisfmdc.api.WorkshopApi;
 import com.portfolio.luisfmdc.api_sboot_jdbi_workshops.service.WorkshopService;
 import com.portfolio.luisfmdc.model.WorkshopRequest;
 import com.portfolio.luisfmdc.model.WorkshopResponse;
+import com.portfolio.luisfmdc.model.WorkshopUpdateRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -24,5 +25,10 @@ public class WorkshopController implements WorkshopApi {
     @Override
     public ResponseEntity<WorkshopResponse> findWorkshop(Integer workshopId) {
         return workshopService.findWorkshop(workshopId);
+    }
+
+    @Override
+    public ResponseEntity<WorkshopResponse> updateWorkshop(Integer workshopId, WorkshopUpdateRequest workshopUpdateRequest) {
+        return workshopService.updateWorkshop(workshopUpdateRequest, workshopId);
     }
 }
