# src/main/java/com/portfolio/luisfmdc/api_sboot_jdbi_workshops/model/Workshop.java
@@ -1,8 +1,11 @@
 package com.portfolio.luisfmdc.api_sboot_jdbi_workshops.model;
 
+import com.portfolio.luisfmdc.model.WorkshopUpdateRequest;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+
+import java.util.Objects;
 
 @Data
 @NoArgsConstructor
@@ -21,5 +24,38 @@ public class Workshop {
         this.cnpj = cnpj;
         this.cidade = cidade;
         this.estado = estado;
+    }
+
+    public boolean updateWorkshop(WorkshopUpdateRequest updateRequest) {
+        boolean isUpdateValid = false;
+        if (updateRequest.getNome() != null && !updateRequest.getNome().isBlank()) {
+            if (!Objects.equals(updateRequest.getNome(), this.nome)) {
+                this.nome = updateRequest.getNome();
+                isUpdateValid = true;
+            }
+        }
+
+        if (updateRequest.getCidade() != null && !updateRequest.getCidade().isBlank()) {
+            if (!Objects.equals(updateRequest.getCidade(), this.cidade)) {
+                this.cidade = updateRequest.getCidade();
+                isUpdateValid = true;
+            }
+        }
+
+        if (updateRequest.getEstado() != null && !updateRequest.getEstado().isBlank()) {
+            if (!Objects.equals(updateRequest.getEstado(), this.estado)) {
+                this.estado = updateRequest.getEstado();
+                isUpdateValid = true;
+            }
+        }
+
+        if (updateRequest.getAtiva() != null) {
+            if (!Objects.equals(updateRequest.getAtiva(), this.ativa)) {
+                this.ativa = updateRequest.getAtiva();
+                isUpdateValid = true;
+            }
+        }
+
+        return isUpdateValid;
     }
 }
